--- a/app/src/main/res/menu/appbar_computadora.xml
+++ b/app/src/main/res/menu/appbar_computadora.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:icon="@drawable/ic_action_name"
-        android:title="Item"
-        app:showAsAction="always" />
+        android:id="@+id/btn_menu_computadora"
+        android:icon="@drawable/ic_3puntos"
+        app:showAsAction="ifRoom" />
 </menu>
