appbar_computadora.xml

--- a/app/src/main/res/layout/activity_teclado.xml
+++ b/app/src/main/res/layout/activity_teclado.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TecladoActivity">
+    tools:context=".Teclado">
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="325dp"
+        android:layout_height="682dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
