--- a/app/src/main/res/layout/activity_teclado.xml
+++ b/app/src/main/res/layout/activity_teclado.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Teclado">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="325dp"
-        android:layout_height="682dp"
-        android:layout_marginTop="48dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lv_teclado"
+        android:layout_width="326dp"
+        android:layout_height="675dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButtonTeclado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="36dp"
+        android:clickable="true"
+        android:onClick="añadirTeclado"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_name" />
 </android.support.constraint.ConstraintLayout>
