--- a/app/src/main/res/layout/activity_computadora.xml
+++ b/app/src/main/res/layout/activity_computadora.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:text="@string/textViewMonitor"
+            android:text="No hay computadoras ingresadas"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,6 +44,7 @@
 
             android:layout_marginBottom="24dp"
             android:clickable="true"
+            android:onClick="irCrearComputadora"
             app:backgroundTint="#F1F1F1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
