--- a/app/src/main/res/layout/activity_computadora.xml
+++ b/app/src/main/res/layout/activity_computadora.xml
@@ -44,7 +44,7 @@
 
             android:layout_marginBottom="24dp"
             android:clickable="true"
-            android:onClick="irCrearComputadora"
+            android:onClick="añadirComputadora"
             app:backgroundTint="#F1F1F1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
